# stc

./: .gitignore  AGENTS.md  MEMORY.md  Makefile  README.md  TASKS.md  env.json  main.py  pyproject.toml  setup-skills.sh
SKILLS/coder/: SKILL.md  (+1 more)
docs/: AI-Assisted-Ticket-Classification-DDD.md  AI-Assisted-Ticket-Classification-Installation-Guide.md  AI-Assisted-Ticket-Classification-design-doc-Corporate.docx  AI-Assisted-Ticket-Classification-design-doc-Polished.docx  AI-Assisted-Ticket-Classification-design-doc.md  config.toml  dc_ops_training_workflow.md  executive-email-ask.md  fault-code-map.csv  help_chs_aga_mi355x.md  human-audit-playbook.md  installing-codex.md  mi300x_fault_dictionary.md  stc-training-sop.md  stc-training-ui-operator-checklist.md  training-runbook.md
prompts/: train-to-categorize-tickets-prompt.md  training.md  update-rule-engine-prompt.md
scripts/: conftest.py  create-summary.py  create_rule_from_ticket.py  create_summary.py  csv-jql-transform.py  csv_jql_transform.py  get-tickets.py  get_tickets.py  ml_classifier.py  ml_train.py  normalize-tickets.py  normalize_tickets.py  rule-engine-categorize.py  rule_engine_categorize.py  run-training.py  run-training.sh  run-update-rules.sh  run_training.py  run_training_loop.sh  setup-skills.sh  sync_agents_claude.py  test-get-tickets.py  test-normalize-tickets.py  test_get_tickets.py  test_normalize_tickets.py
templates/: data-schemes.md  rule-engine.csv  tickets-categorized.csv
wireframe-ui/: jest.config.cjs  jest.setup.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts
(+295 files in other folders)
